@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/virtualgl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/virtualgl/ChangeLog,v 1.2 2012/06/04 19:31:51 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/virtualgl/ChangeLog,v 1.3 2012/06/06 11:54:11 pacho Exp $
+
+  06 Jun 2012; Pacho Ramos <pacho@gentoo.org> virtualgl-2.3.ebuild:
+  Drop postinst message as it's common to have conf.d files for configuration of
+  init.d scripts. Also drop ED usage over D because of missing prefix support.
 
   04 Jun 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Fix metadata.
